fix stepper step alignment

--- a/src/components/stepper.css
+++ b/src/components/stepper.css
@@ -15,7 +15,7 @@
     display: inline-block;
     vertical-align: middle;
     position: relative;
-    left: -26px;
+    left: -36px;
     color: white;
     text-align: center;
     line-height: 30px;
